--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,9 @@
   padding-left: 20px;
   
 }
+.interest{
+  display: block;
+  justify-content: left;
+  align-items: center;
+  padding-left: 20px;
+}
